--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,18 @@ header a {
 }
 header h1 {
   text-align: center;
+  margin: 0;
+  padding: 0;
+}
+@media (min-width: 992px) {
+  header .nav_media {
+    display: none;
+  }
+}
+@media (max-width: 992px) {
+  header ul {
+    display: none;
+  }
 }
 
 * {
