index is fully done and responsive

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,56 @@ header h1 {
   }
 }
 
+main {
+  background-color: #ffc15e;
+}
+main .imageLink {
+  transition: transform 0.5s;
+}
+main .imageLink:hover {
+  transform: scale(1.05);
+}
+main img {
+  border-radius: 8px;
+}
+main p {
+  font-size: 22px;
+  font-family: "Montserrat", sans-serif;
+}
+main .indexLibro {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 20px 50px 10px;
+}
+main .parrafoLibro {
+  width: 800px;
+  justify-self: center;
+}
+main .toCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+}
+main .toCenter h2 {
+  align-self: flex-start;
+}
+main .slider {
+  max-width: 415px;
+}
+@media (max-width: 420px) {
+  main .slider {
+    max-width: 300px;
+  }
+  main .imageLink {
+    width: 250px;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
