--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import '../scss/base/mixin';
 @import '../scss/base/footer';
 @import '../scss/base/header';
+@import '../scss/base/animations';
 @import '../scss/componentes/index';
 
 
