--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -82,3 +82,31 @@ main {
         }
     }
 }
+
+section {
+    background-color: #ffc15e;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    img {
+        padding: 50px;
+        animation-name: upAndDown;
+        animation-duration: 2s;
+        animation-timing-function: ease-in-out;
+        animation-delay: 0s;
+        animation-iteration-count: infinite;
+        animation-direction: normal;
+        animation-fill-mode: none;
+    }
+    p {
+        font-size: 22px;
+        font-family: 'Rubik', sans-serif;
+         padding: 50px;
+    }
+
+    @media (max-width: 992px) {
+        .animated {
+            display: none;
+        }
+    }
+}
