--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,11 +7,15 @@
 @import '../scss/base/header';
 @import '../scss/base/animations';
 @import '../scss/componentes/index';
+@import '../scss/componentes/libros';
 
 
 *{
     margin: 0;
     padding: 0;
+    body {
+        background-color: $bg_ppl;
+    }
 }
 ul {
     margin: 0;
