--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@
 @import '../scss/base/animations';
 @import '../scss/componentes/index';
 @import '../scss/componentes/libros';
-
+@import '../scss/componentes/autores';
 
 *{
     margin: 0;
