--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import '../scss/componentes/index';
 @import '../scss/componentes/libros';
 @import '../scss/componentes/autores';
+@import '../scss/componentes/sagas';
 
 *{
     margin: 0;
