--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,60 @@ body #libros div {
   }
 }
 
+#sagas {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: 2fr 2fr;
+  grid-template-areas: "cosmere disco" "holmes potter";
+  gap: 20px;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+#sagas .cosmere {
+  grid-area: cosmere;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+#sagas .disco {
+  grid-area: disco;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+#sagas .holmes {
+  grid-area: holmes;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+#sagas .potter {
+  grid-area: potter;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 630px) {
+  #sagas {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  #sagas img {
+    width: 300px;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
