--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 @import '../scss/componentes/libros';
 @import '../scss/componentes/autores';
 @import '../scss/componentes/sagas';
+@import '../scss/componentes/caminodelosreyes';
 
 *{
     margin: 0;
