--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ section img {
   animation-fill-mode: none;
 }
 section p {
-  font-size: 22px;
+  font-size: 32px;
   font-family: "Rubik", sans-serif;
   padding: 50px;
 }
@@ -319,7 +319,7 @@ body #libros div {
   grid-template-rows: 2fr 2fr;
   grid-template-areas: "cosmere disco" "holmes potter";
   gap: 20px;
-  padding: 20px;
+  padding: 20px 20px 40px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -363,6 +363,47 @@ body #libros div {
     flex-direction: column;
   }
   #sagas img {
+    width: 300px;
+  }
+}
+
+#caminoReyes .infoLibro {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  flex-wrap: wrap;
+  align-items: center;
+}
+#caminoReyes .infoLibro p {
+  width: 25%;
+}
+#caminoReyes .generoRating {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-bottom: 20px;
+  align-items: center;
+}
+#caminoReyes .generoRating ul {
+  list-style-type: circle;
+}
+#caminoReyes .generoRating ul li {
+  font-weight: bold;
+}
+#caminoReyes .imagenesLibro {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 20px;
+  justify-content: center;
+}
+@media (max-width: 992px) {
+  #caminoReyes .infoLibro img {
+    max-width: 500px;
+  }
+}
+@media (max-width: 560px) {
+  #caminoReyes img {
     width: 300px;
   }
 }
