added keywords, description and used a map, should only need add a mixin

--- a/scss/base/_maps.scss
+++ b/scss/base/_maps.scss
@@ -1,6 +1,6 @@
-// $titulos: (
-//    titulo: 44px,
-//    decoracion: underline,
-//    bordes: 2px blue solid,
-// );
+$flexado:   (
+  flexibilidad: wrap,
+  direccion: column,
+  direcciones: row,
+            );
 
