--- a/scss/componentes/_caminodelosreyes.scss
+++ b/scss/componentes/_caminodelosreyes.scss
@@ -3,17 +3,17 @@
         display: flex;
         gap: 20px;
         padding: 20px;
-        flex-wrap: wrap;
+        flex-wrap: map-get($flexado, flexibilidad);
         align-items: center;
 
         p{ 
-            width: 25%;
+            width: 35%;
         }
       }
 
       .generoRating {
         display: flex;
-        flex-direction: column;
+        flex-direction: map-get($flexado, direccion);
         gap: 20px;
         padding-bottom: 20px;
         align-items: center;
@@ -27,7 +27,7 @@
 
       .imagenesLibro {
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: map-get($flexado, flexibilidad);
         gap: 10px;
         padding: 20px;
         justify-content: center;
