--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -1,23 +1,3 @@
-// header {
-//     nav {
-//         list-style: none;
-//         display: flex;
-//     }
-//     background-color: $bg_ppl;
-// }
-
-// main div {
-//     color: nth($colores, 2 );
-// }
-
-// h2 {
-//     font-size: map-get($titulos, titulo );
-//     text-decoration: map-get($titulos, decoracion);
-// }
-
-// footer div {
-//     @extend %disposicion;
-// }
 
 // header div {
 //     @include pieDePagina(yellow,10px,20px);
@@ -44,11 +24,11 @@ main {
 
     .indexLibro {
         display: flex;
-        flex-direction: row;
+        flex-direction: map-get($flexado, direcciones);
         gap: 50px;
         align-items: center;
         justify-content: flex-start;
-        flex-wrap: wrap;
+        flex-wrap: map-get($flexado, flexibilidad);
         padding: 20px 50px 10px;
       }
 
