--- a/css/style.css
+++ b/css/style.css
@@ -98,12 +98,19 @@ main .slider {
 }
 
 section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row: 1fr 1fr;
+  grid-template-areas: "h2" "div";
+}
+section .animadoTexto {
   background-color: #ffc15e;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  grid-area: div;
 }
-section img {
+section .animadoTexto img {
   padding: 50px;
   animation-name: upAndDown;
   animation-duration: 2s;
@@ -113,15 +120,21 @@ section img {
   animation-direction: normal;
   animation-fill-mode: none;
 }
-section p {
+section .animadoTexto p {
   font-size: 32px;
   font-family: "Rubik", sans-serif;
   padding: 50px;
 }
 @media (max-width: 992px) {
-  section .animated {
+  section .animadoTexto .animated {
     display: none;
   }
+}
+section .titulado {
+  grid-area: h2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body p {
