--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -64,10 +64,18 @@ main {
 }
 
 section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row: 1fr 1fr;
+  grid-template-areas: 
+  "h2"
+  "div";
+  .animadoTexto {
     background-color: $bg_ppl;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    grid-area: div;
     img {
         padding: 50px;
         animation-name: upAndDown;
@@ -89,4 +97,12 @@ section {
             display: none;
         }
     }
+  }
+
+  .titulado {
+    grid-area: h2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
