--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -1,5 +1,5 @@
-// @mixin pieDePagina ($bg, $mg, $pd) {
-//     background-color: plum;
-//     margin: 10px;
-//     padding: 20px;
-// }
+ @mixin seccionIndex ($bg, $pfs, $pd) {
+     background-color: $bg;
+     font-size: $pfs;
+     padding: $pd;
+ }
