--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -1,10 +1,6 @@
 
-// header div {
-//     @include pieDePagina(yellow,10px,20px);
-// }
-
 main {
-    // background-color: #ffc15e;
+
 
     .imageLink {
         &:hover {
@@ -52,7 +48,7 @@ main {
         max-width: 415px;
       }
 
-      @media (max-width: 420px) {
+      @media (max-width: 470px) {
         .slider {
           max-width: 300px;
         }
@@ -64,6 +60,7 @@ main {
 }
 
 section {
+  @include seccionIndex ($bg_ppl, 32px, 50px);
   display: grid;
   grid-template-columns: 1fr;
   grid-row: 1fr 1fr;
@@ -71,13 +68,11 @@ section {
   "h2"
   "div";
   .animadoTexto {
-    background-color: $bg_ppl;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     grid-area: div;
     img {
-        padding: 50px;
         animation-name: upAndDown;
         animation-duration: 2s;
         animation-timing-function: ease-in-out;
@@ -87,9 +82,7 @@ section {
         animation-fill-mode: none;
     }
     p {
-        font-size: 32px;
         font-family: 'Rubik', sans-serif;
-         padding: 50px;
     }
 
     @media (max-width: 992px) {
@@ -104,5 +97,9 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+     h2 {
+       font-weight: bold;
+       font-size: 40px;
+     }
   }
 }
